CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ArexxRobotArmExamples)

FIND_PACKAGE(ArexxRobotArm REQUIRED)
INCLUDE("arexx_robot_arm_crosscompile")

IF(NOT CMAKE_CROSSCOMPILING)
	ERROR()
ENDIF()

MACRO(BUILD_ROBOT_ARM_EXAMPLE FOLDER_NAME)
	FILE(GLOB SOURCE_FILES "${FOLDER_NAME}/*.c")
	ADD_ROBOT_ARM_EXECUTABLE(${FOLDER_NAME} ${SOURCE_FILES})
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${FOLDER_NAME}.hex DESTINATION ${CMAKE_INSTALL_PREFIX}/share/robotloader/examples/${FOLDER_NAME})
	INSTALL(DIRECTORY ${FOLDER_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/robotloader/examples/${FOLDER_NAME})
ENDMACRO(BUILD_ROBOT_ARM_EXAMPLE)

BUILD_ROBOT_ARM_EXAMPLE(Calibrate_RobotArm)
BUILD_ROBOT_ARM_EXAMPLE(Example_01_Leds)
BUILD_ROBOT_ARM_EXAMPLE(Example_02_Uart_01)
BUILD_ROBOT_ARM_EXAMPLE(Example_03_Uart_02)
#BUILD_ROBOT_ARM_EXAMPLE(Example_04_Stopwatches)
BUILD_ROBOT_ARM_EXAMPLE(Example_05_Measuring_Current)
BUILD_ROBOT_ARM_EXAMPLE(Example_06_Move_01)
BUILD_ROBOT_ARM_EXAMPLE(Example_07_Move_02)
BUILD_ROBOT_ARM_EXAMPLE(Example_08_Move_03)
BUILD_ROBOT_ARM_EXAMPLE(Example_09_Key_Board)
BUILD_ROBOT_ARM_EXAMPLE(Example_10_I2C)
BUILD_ROBOT_ARM_EXAMPLE(Example_11_Selftest)
BUILD_ROBOT_ARM_EXAMPLE(Example_12_Music)


