CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(racsqt)
SET(CMAKE_MODULE_PATH ${racsqt_SOURCE_DIR})
SET(VERSION_SERIES 0)
SET(VERSION_MAJOR 0)
SET(VERSION_MINOR 1)
SET(racsqt_SOVERSION 1)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release CACHE STRING
      "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

FIND_PACKAGE(Boost 1.42 REQUIRED)
FIND_PACKAGE(Qt4   COMPONENTS QtCore QtGui REQUIRED)

ADD_DEFINITIONS(-DWT_THREADED -D_REENTRANT -DBOOST_SPIRIT_THREADSAFE)

# Make sure the compiler can find include files.
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
INCLUDE(${QT_USE_FILE})

LINK_DIRECTORIES(${BOOST_LIB_DIRS})

SET(racsqt_SRCS main.cpp mainwindow.cpp Communication.cpp)
SET(racsqt_MOC_HDRS mainwindow.h)
QT4_WRAP_CPP(racsqt_SRCS ${racsqt_MOC_HDRS})

ADD_EXECUTABLE(racsqt ${racsqt_SRCS})

TARGET_LINK_LIBRARIES(racsqt 
	boost_system-mt 
	boost_thread-mt 
	${QT_LIBRARIES}
)

SET_TARGET_PROPERTIES(racsqt
  PROPERTIES
    VERSION ${VERSION_SERIES}.${VERSION_MAJOR}.${VERSION_MINOR}
    SOVERSION ${racsqt_SOVERSION}
    DEBUG_POSTFIX "d"
  )

INSTALL(TARGETS racsqt RUNTIME DESTINATION bin)

